--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -7,9 +7,253 @@
 <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title>Jaguar Land Rover Range Rover - Expanded Models</title>
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{color:var(--black);background:var(--white);user-select:none}center h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.exp-container{display:inline-block;border:2px rgba(211,211,211,0.247) solid;border-radius:6px;margin:10px 10px;width:48%}.exp-container h1{color:var(--richColor);font-size:20px;font-family:'Cinzel',serif;letter-spacing:2px}.exp-img{width:100%}.exp-details{font-family:'Jost',sans-serif;line-height:23px;padding:10px 20px}.exp-sec{display:inline-block;width:47%;border:2px rgba(0,0,0,0) solid}.key-feat{padding:5px 10px;margin:0px 10px;border-bottom:2px rgb(211,211,211) solid}.ic-check{transform:rotate(-3deg);color:rgb(0,208,59)}.ic-rate{transform:rotate(-3deg);color:rgb(255,196,0)}.price-tg{padding-top:40px}.price-tg h2{font-weight:normal;font-style:normal;font-display:normal}.options{padding:0 10px;margin:10px 0;border:2px rgba(0,0,0,0) solid}.mech-btn{display:inline-block;padding:10px 20px;margin:0 10px;border-radius:0px;font-size:10px;font-weight:400;font-family:'Cinzel',serif;letter-spacing:1px;color:#fff;border:2px var(--transparent) solid;background:var(--richColor);text-decoration:none;cursor:pointer;transition:all 0.1s ease}.mech-btn:hover{color:var(--richColor);border:2px var(--richColor) solid;background:#efc39700}.divider{margin:0 10px;margin-top:80px;padding:1px 20px;color:var(--white);background:var(--richColor);font-family:'Cinzel',serif;letter-spacing:2px}.sm-info{color:var(--black);text-decoration:none}.sm-info:hover{color:var(--black);text-decoration:underline}@media screen and(max-width:768px){center h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.exp-container{display:inline-block;border:2px rgb(211,211,211) solid;border-radius:6px;margin:20px 0px;width:98%}.exp-container h1{color:var(--richColor);font-size:18px;font-family:'Cinzel',serif;letter-spacing:2px}.exp-img{width:100%}.exp-details{font-size:10px;font-family:'Jost',sans-serif;line-height:23px;padding:10px 10px}.exp-sec{display:inline-block;width:47%;border:2px rgba(0,0,0,0) solid}.key-feat{padding:5px 10px;margin:0px 10px;border-bottom:2px rgb(211,211,211) solid}.ic-check{transform:rotate(-3deg);color:rgb(0,208,59)}.ic-rate{transform:rotate(-3deg);color:rgb(255,196,0)}.price-tg{padding-top:40px}.price-tg h2{font-weight:normal;font-style:normal;font-display:normal}.options{padding:0 10px;margin:10px 0;border:2px rgba(0,0,0,0) solid}.mech-btn{display:inline-block;padding:10px 20px;margin:0 10px;border-radius:0px;font-size:8px;font-weight:400;font-family:'Cinzel',serif;letter-spacing:1px;color:#fff;border:2px var(--transparent) solid;background:var(--richColor);text-decoration:none;cursor:pointer;transition:all 0.1s ease}.mech-btn:hover{color:var(--richColor);border:2px var(--richColor) solid;background:#efc39700}}
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
+
+        body {
+            color: var(--black);
+            background: var(--white);
+            user-select: none
+        }
+
+        center h1 {
+            color: #e0b68c;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px;
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+            padding: 10px 20px;
+            border-bottom: 2px rgba(214, 214, 214, 0) solid;
+            font-size: 40px;
+            margin: 15%;
+            height: 30vh
+        }
+
+        .nav-ic {
+            display: none
+        }
+
+        .nav-strg {
+            display: block
+        }
+        .exp-container {
+            display: inline-block;
+            border: 2px rgba(211, 211, 211, 0.247) solid;
+            border-radius: 6px;
+            margin: 10px 10px;
+            width: 48%
+        }
+
+        .exp-container h1 {
+            color: var(--richColor);
+            font-size: 20px;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px
+        }
+
+        .exp-img {
+            width: 100%
+        }
+
+        .exp-details {
+            font-family: 'Jost', sans-serif;
+            line-height: 23px;
+            padding: 10px 20px
+        }
+
+        .exp-sec {
+            display: inline-block;
+            width: 47%;
+            border: 2px rgba(0, 0, 0, 0) solid
+        }
+
+        .key-feat {
+            padding: 5px 10px;
+            margin: 0px 10px;
+            border-bottom: 2px rgb(211, 211, 211) solid
+        }
+
+        .ic-check {
+            transform: rotate(-3deg);
+            color: rgb(0, 208, 59)
+        }
+
+        .ic-rate {
+            transform: rotate(-3deg);
+            color: rgb(255, 196, 0)
+        }
+
+        .price-tg {
+            padding-top: 40px
+        }
+
+        .price-tg h2 {
+            font-weight: normal;
+            font-style: normal;
+            font-display: normal
+        }
+
+        .options {
+            padding: 0 10px;
+            margin: 10px 0;
+            border: 2px rgba(0, 0, 0, 0) solid
+        }
+
+        .mech-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 0px;
+            font-size: 10px;
+            font-weight: 400;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 1px;
+            color: #fff;
+            border: 2px var(--transparent) solid;
+            background: var(--richColor);
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.1s ease
+        }
+
+        .mech-btn:hover {
+            color: var(--richColor);
+            border: 2px var(--richColor) solid;
+            background: #efc39700
+        }
+
+        .divider {
+            margin: 0 10px;
+            margin-top: 80px;
+            padding: 1px 20px;
+            color: var(--white);
+            background: var(--richColor);
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px
+        }
+
+        .sm-info {
+            color: var(--black);
+            text-decoration: none
+        }
+
+        .sm-info:hover {
+            color: var(--black);
+            text-decoration: underline
+        }
+
+        @media screen and(max-width:768px) {
+            center h1 {
+                color: #e0b68c;
+                font-family: 'Cinzel', serif;
+                letter-spacing: 2px;
+                text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+                padding: 10px 20px;
+                border-bottom: 2px rgba(214, 214, 214, 0) solid;
+                font-size: 40px;
+                margin: 15%;
+                height: 30vh
+            }
+
+            .nav-ic {
+                display: block
+            }
+
+            .nav-strg {
+                display: none
+            }
+            .exp-container {
+                display: inline-block;
+                border: 2px rgb(211, 211, 211) solid;
+                border-radius: 6px;
+                margin: 20px 0px;
+                width: 98%
+            }
+
+            .exp-container h1 {
+                color: var(--richColor);
+                font-size: 18px;
+                font-family: 'Cinzel', serif;
+                letter-spacing: 2px
+            }
+
+            .exp-img {
+                width: 100%
+            }
+
+            .exp-details {
+                font-size: 10px;
+                font-family: 'Jost', sans-serif;
+                line-height: 23px;
+                padding: 10px 10px
+            }
+
+            .exp-sec {
+                display: inline-block;
+                width: 47%;
+                border: 2px rgba(0, 0, 0, 0) solid
+            }
+
+            .key-feat {
+                padding: 5px 10px;
+                margin: 0px 10px;
+                border-bottom: 2px rgb(211, 211, 211) solid
+            }
+
+            .ic-check {
+                transform: rotate(-3deg);
+                color: rgb(0, 208, 59)
+            }
+
+            .ic-rate {
+                transform: rotate(-3deg);
+                color: rgb(255, 196, 0)
+            }
+
+            .price-tg {
+                padding-top: 40px
+            }
+
+            .price-tg h2 {
+                font-weight: normal;
+                font-style: normal;
+                font-display: normal
+            }
+
+            .options {
+                padding: 0 10px;
+                margin: 10px 0;
+                border: 2px rgba(0, 0, 0, 0) solid
+            }
+
+            .mech-btn {
+                display: inline-block;
+                padding: 10px 20px;
+                margin: 0 10px;
+                border-radius: 0px;
+                font-size: 8px;
+                font-weight: 400;
+                font-family: 'Cinzel', serif;
+                letter-spacing: 1px;
+                color: #fff;
+                border: 2px var(--transparent) solid;
+                background: var(--richColor);
+                text-decoration: none;
+                cursor: pointer;
+                transition: all 0.1s ease
+            }
+
+            .mech-btn:hover {
+                color: var(--richColor);
+                border: 2px var(--richColor) solid;
+                background: #efc39700
+            }
+        }
     </style>
 </head>
 <body>
@@ -457,6 +701,7 @@
         </div>
     </div>
 
+    <div id="loading"></div>
     <div id="explore"></div>
     </div>
     <script src="js/global.js"></script>
