--- a/test/Untitled-1.html
+++ b/test/Untitled-1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script type="text/javascript" language="javascript" src="https://rubyproducti9n.github.io/mech/test/people.json"></script> -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
     <title>Document</title>
     <style>
@@ -28,7 +27,7 @@
 
        var people = [];
 
-       $.getJSON('people.json', function(data) {
+       $.getJSON('../people.json', function(data) {
            $.each(data.person, function(i, f) {
               var tblRow = "<tr>" + "<td>" + f.firstName + "</td>" +
                "<td>" + f.lastName + "</td>" + "<td>" + f.job + "</td>" + "<td>" + f.roll + "</td>" + "</tr>"
