--- a/test/Untitled-1.html
+++ b/test/Untitled-1.html
@@ -60,7 +60,7 @@
         </div>
         <div id="myData"></div>
         <script type="text/javascript">
-            fetch('people.json')
+            fetch('../people.json')
                 .then(function (response) {
                     return response.json();
                 })
