--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -12,6 +12,7 @@
             display: inline-block;
             border: 2px #000 solid;
             width: 16%;
+            height: fit-content;
             margin: 10px 20px;
             overflow: hidden;
         }
