--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
     <title>Document</title>
-    <!-- <style>
+    <style>
 
         .pr-container{
             display: inline-block;
@@ -34,7 +34,7 @@
             font-size: 12px;
         }
 
-    </style> -->
+    </style>
 
 </head>
 <body onload="load()">
@@ -73,7 +73,7 @@
                     let div = document.createElement("div");
                     div.innerHTML =
                     '<div class="pr-container">'
-                    '<div class="pr-img">' + data[i].prImage + '</div>'
+                    '<div class="pr-img">' + ' ' + data[i].prImage + ' ' +'</div>'
                     '<div class="pr-nme">' + data[i].fullName + '</div>'
                     '<div class="pr-roll">' + data[i].roll + '</div>'
                     '<div class="pr-int">' + data[i].intField + '</div>'
