--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -56,6 +56,27 @@
             </div> -->
         </div>
         <script type="text/javascript">
+
+            fetch('../data.json')
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function (data) {
+                    appendData(data);
+                })
+                .catch(function (err) {
+                    console.log('error: ' + err);
+                });
+
+            function appendData(data) {
+                let mainContainer = document.getElementById("myData");
+                for (let i = 0; i < data.length; i++) {
+                    let div = document.createElement("div");
+                    div.innerHTML = 'Name: ' + data[i].id + ' ' + data[i].prImage + '<br>' + 'Roll No.: ' + data[i].fullName;
+                    mainContainer.appendChild(div);
+                }
+            }
+
             fetch('../data.json')
                 .then(function (response) {
                     return response.json();
