--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -76,7 +76,7 @@
                     let div = document.createElement("div");
                     div.innerHTML =
                     '<div class="pr-container">\
-                    <div class="pr-img">' + ' ' + data[i].prImage + ' ' +'</div>\
+                    <div class="pr-img">' + '<img src="' + data[i].prImage + '" class="img"> ' +'</div>\
                     <div class="pr-nme">' + data[i].fullName + '</div>\
                     <div class="pr-roll">' + data[i].roll + '</div>\
                     <div class="pr-int">' + data[i].intField + '</div>\
