--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -7,21 +7,28 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
     <title>Document</title>
     <style>
-
+        body{
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1009%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='%230e2a47'%3e%3c/rect%3e%3cpath d='M1378.7 224.36 a18.71 18.71 0 1 0 37.42 0 a18.71 18.71 0 1 0 -37.42 0z' fill='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M774.91 515.21a10.88 10.88 0 1 0 20.44 7.46z' fill='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M584.27 315.18 a48.96 48.96 0 1 0 97.92 0 a48.96 48.96 0 1 0 -97.92 0z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M724.55 305.06L730.08 305.06L730.08 310.59L724.55 310.59z' fill='rgba(206%2c 0%2c 72%2c 1)'%3e%3c/path%3e%3cpath d='M1280.54 458.88L1328.3 458.88L1328.3 506.64L1280.54 506.64z' fill='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M1032.92 221.92a19.53 19.53 0 1 0-39.04-1.27z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M1062.82 522.7L1113.7 522.7L1113.7 573.58L1062.82 573.58z' stroke='rgba(255%2c 0%2c 89%2c 1)'%3e%3c/path%3e%3cpath d='M850.63 166.78 a5.53 5.53 0 1 0 11.06 0 a5.53 5.53 0 1 0 -11.06 0z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M580.86 186.39a8.7 8.7 0 1 0 0.16 17.4z' stroke='rgba(255%2c 0%2c 89%2c 1)'%3e%3c/path%3e%3cpath d='M27.56 83.57a25.72 25.72 0 1 0 14.46 49.37z' stroke='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3cpath d='M507.51 495.17a15.53 15.53 0 1 0-28.43 12.51z' fill='rgba(255%2c 0%2c 89%2c 1)'%3e%3c/path%3e%3cpath d='M1195.37 159.41 a11.36 11.36 0 1 0 22.72 0 a11.36 11.36 0 1 0 -22.72 0z' stroke='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3cpath d='M1142.69 219.05L1150.34 219.05L1150.34 226.7L1142.69 226.7z' fill='rgba(206%2c 0%2c 72%2c 1)'%3e%3c/path%3e%3cpath d='M864.18 130.7 a26.88 26.88 0 1 0 53.76 0 a26.88 26.88 0 1 0 -53.76 0z' stroke='rgba(164%2c 30%2c 77%2c 1)'%3e%3c/path%3e%3cpath d='M425.99 235.08L465.17 235.08L465.17 274.26L425.99 274.26z' stroke='rgba(206%2c 0%2c 72%2c 1)'%3e%3c/path%3e%3cpath d='M518.39 362.81 a34.38 34.38 0 1 0 68.76 0 a34.38 34.38 0 1 0 -68.76 0z' fill='rgba(164%2c 30%2c 77%2c 1)'%3e%3c/path%3e%3cpath d='M1030.74 342.33L1066.46 342.33L1066.46 378.05L1030.74 378.05z' stroke='rgba(206%2c 0%2c 72%2c 1)'%3e%3c/path%3e%3cpath d='M1411.79 347.15 a0.62 0.62 0 1 0 1.24 0 a0.62 0.62 0 1 0 -1.24 0z' fill='rgba(164%2c 30%2c 77%2c 1)'%3e%3c/path%3e%3cpath d='M34.18 394.4L42.68 394.4L42.68 402.9L34.18 402.9z' fill='rgba(164%2c 30%2c 77%2c 1)'%3e%3c/path%3e%3cpath d='M1425.63 147.49L1456.4 147.49L1456.4 178.26L1425.63 178.26z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M946.5 464.59 a42.48 42.48 0 1 0 84.96 0 a42.48 42.48 0 1 0 -84.96 0z' stroke='rgba(164%2c 30%2c 77%2c 1)'%3e%3c/path%3e%3cpath d='M446.03 492.17a31.49 31.49 0 1 0-39.28-49.23z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M825.43 107.54L845.77 107.54L845.77 133.65L825.43 133.65z' fill='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M1296.35 235.65L1311.2 235.65L1311.2 250.12L1296.35 250.12z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M17.07 430.32a4.77 4.77 0 1 0-3.68-8.8z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M1027.38 440.13 a34.53 34.53 0 1 0 69.06 0 a34.53 34.53 0 1 0 -69.06 0z' fill='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3cpath d='M176.27 463.15a52.84 52.84 0 1 0-71.34 77.97z' stroke='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M640.94 462.89L661.64 462.89L661.64 483.59L640.94 483.59z' fill='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3cpath d='M361.17 218.36 a53.23 53.23 0 1 0 106.46 0 a53.23 53.23 0 1 0 -106.46 0z' fill='rgba(206%2c 0%2c 72%2c 1)'%3e%3c/path%3e%3cpath d='M918.53 346.81L971.12 346.81L971.12 399.4L918.53 399.4z' fill='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3cpath d='M569.26 427.5L621.19 427.5L621.19 479.43L569.26 479.43z' fill='rgba(254%2c 16%2c 99%2c 1)'%3e%3c/path%3e%3cpath d='M329.09 127.69L345.83 127.69L345.83 164.99L329.09 164.99z' stroke='rgba(255%2c 0%2c 89%2c 1)'%3e%3c/path%3e%3cpath d='M243.81 506.07 a26.08 26.08 0 1 0 52.16 0 a26.08 26.08 0 1 0 -52.16 0z' stroke='rgba(255%2c 44%2c 118%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1009'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+        }
         .pr-container{
-            display: inline-block;
+            display: none;
             border: 2px #000 solid;
+            border-radius: 6px;
+            background: rgba(255, 255, 255, 0.756);
+            backdrop-filter: blur(14px);
             width: 16%;
             height: fit-content;
+            padding: 10px 20px;
             margin: 10px 20px;
             overflow: hidden;
         }
         .img{
             width: 100%;
-            border: 2px #000 solid;
+            border:0px rgba(0, 0, 0, 0) solid;
+            border-radius: 200px;
         }
         .pr-nme, .pr-roll, .pr-int{
-            padding: 5px 10px;
+            padding: 10px 10px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         .pr-nme{
@@ -33,6 +40,38 @@
         .pr-int{
             font-size: 12px;
         }
+        @media screen and (max-width:768px){
+            .pr-container{
+                display: block;
+                border: 0px #000 solid;
+                border-radius: 6px;
+                background: rgba(255, 255, 255, 0.756);
+                backdrop-filter: blur(14px);
+                width: 82%;
+                height: fit-content;
+                padding: 10px 20px;
+                margin: 50px 10px;
+                overflow: hidden;
+            }
+            .img{
+                width: 100%;
+                border:0px rgba(0, 0, 0, 0) solid;
+                border-radius: 200px;
+            }
+            .pr-nme, .pr-roll, .pr-int{
+                padding: 10px 10px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+            .pr-nme{
+                font-size: 18px;
+            }
+            .pr-roll{
+                font-size: 12px;
+            }
+            .pr-int{
+                font-size: 12px;
+            }
+        }
 
     </style>
 
@@ -40,7 +79,7 @@
 <body onload="load()">
 
         <div id="st-data">
-            <!-- <div class="pr-container">
+            <div class="pr-container">
                 <div class="pr-img">
                     <img class="img" src="../img/profile-avatar.png">
                 </div>
@@ -53,7 +92,21 @@
                 <div class="pr-int">
                     None
                 </div>
-            </div> -->
+            </div>
+            <div class="pr-container">
+                <div class="pr-img">
+                    <img class="img" src="../img/profile-avatar.png">
+                </div>
+                <div class="pr-nme">
+                    Your Name Goes Here
+                </div>
+                <div class="pr-roll">
+                    00
+                </div>
+                <div class="pr-int">
+                    None
+                </div>
+            </div>
         </div>
         <script type="text/javascript">
 
@@ -79,7 +132,7 @@
                     <div class="pr-img">' + '<img src="' + data[i].prImage + '" class="img"> ' +'</div>\
                     <div class="pr-nme">' + data[i].fullName + '</div>\
                     <div class="pr-roll">' + data[i].roll + '</div>\
-                    <div class="pr-int">' + data[i].intField + '</div>\
+                    <div class="pr-int">' + data[i].ume + '</div>\
                     </div>';
                     //div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName + '<br>' + 'Roll No.: ' + data[i].roll;
                     mainContainer.appendChild(div);
