--- a/pages/st-info.html
+++ b/pages/st-info.html
@@ -79,7 +79,7 @@ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/s
 <body onload="load()">
 
         <div id="st-data">
-            <div class="pr-container">
+            <!-- <div class="pr-container">
                 <div class="pr-img">
                     <img class="img" src="../img/profile-avatar.png">
                 </div>
@@ -92,21 +92,8 @@ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/s
                 <div class="pr-int">
                     None
                 </div>
-            </div>
-            <div class="pr-container">
-                <div class="pr-img">
-                    <img class="img" src="../img/profile-avatar.png">
-                </div>
-                <div class="pr-nme">
-                    Your Name Goes Here
-                </div>
-                <div class="pr-roll">
-                    00
-                </div>
-                <div class="pr-int">
-                    None
-                </div>
-            </div>
+            </div> -->
+
         </div>
         <script type="text/javascript">
 
