--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -5,14 +5,177 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="css/global.css">
+ <link rel="stylesheet" href="dark mode/dark-mode.css">
  <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  <title>Jaguar Land Rover Range Rover</title>
  <style>
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{color:var(--black);background:var(--white);user-select:none}h1{color:var(--richColor);font-family:'Cinzel',serif;letter-spacing:1px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.nav-ic{display:none}.nav-strg{display:block}.container{border:2px var(--transparent) solid;padding:0px;margin:60px 0}.mid-section{padding:70px 20px}.mid-section h1{margin:0px 20px;border:2px var(--transparent) solid;width:fit-content;height:fit-content;font-family:'Cinzel',serif}.mid-section h5{letter-spacing:0.5px;border:2px var(--transparent) solid;color:var(--faintDark);margin:0px 50px;height:fit-content;font-size:20px;font-family:'Cinzel',serif}.mid-section h6{width:60%;line-height:28px;font-weight:normal;letter-spacing:0.5px;border:2px var(--transparent) solid;color:var(--faintDark);margin:10px 60px;height:fit-content;font-size:20px;font-family:'Jost',sans-serif}.app-right{float:right;width:30%;transform:rotate(3deg);margin:20px 40px;box-shadow:10px 10px 0px var(--shadow)}.yt-vid{width:100%}.iframe{width:80%;height:500px}@media screen and (max-width:768px){.nav-ic{display:block}.nav-strg{display:none}.container{border:2px #00000000 solid;padding:0px;margin:60px 0}.mid-section{padding:0px 10px}.mid-section h1{margin:0px 0px;border:2px rgba(0,0,0,0) solid;width:fit-content;height:fit-content;font-size:30px;font-family:'Cinzel',serif}.mid-section h5{letter-spacing:0.5px;border:2px rgba(0,0,0,0) solid;color:rgb(34,34,34);margin:0px 20px;height:fit-content;font-size:20px;font-family:'Cinzel',serif}.mid-section h6{width:90%;line-height:28px;font-weight:normal;letter-spacing:0.5px;border:2px rgba(0,0,0,0) solid;color:rgb(112,112,112);margin:10px 20px;height:fit-content;font-size:20px;font-family:'Jost',sans-serif}.app-right{float:right;width:100%;transform:rotate(0deg);margin:20px 0px;box-shadow:0px 0px 0px rgb(56,56,56)}.yt-vid{display:none;border:2px #e0030300 solid;width:100%}.iframe{display:none;width:100%;}}
- </style>
+    @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
+
+    body {
+        color: var(--black);
+        background: var(--white);
+        user-select: none
+    }
+    .dark-control{
+        display: none;
+    }
+    h1 {
+        color: var(--richColor);
+        font-family: 'Cinzel', serif;
+        letter-spacing: 1px;
+        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+        padding: 10px 20px;
+        border-bottom: 2px rgba(214, 214, 214, 0) solid;
+        font-size: 40px;
+        margin: 15%;
+        height: 30vh
+    }
+
+    .nav-ic {
+        display: none
+    }
+
+    .nav-strg {
+        display: block
+    }
+
+    .container {
+        border: 2px var(--transparent) solid;
+        padding: 0px;
+        margin: 60px 0
+    }
+
+    .mid-section {
+        padding: 70px 20px
+    }
+
+    .mid-section h1 {
+        margin: 0px 20px;
+        border: 2px var(--transparent) solid;
+        width: fit-content;
+        height: fit-content;
+        font-family: 'Cinzel', serif
+    }
+
+    .mid-section h5 {
+        letter-spacing: 0.5px;
+        border: 2px var(--transparent) solid;
+        color: var(--faintDark);
+        margin: 0px 50px;
+        height: fit-content;
+        font-size: 20px;
+        font-family: 'Cinzel', serif
+    }
+
+    .mid-section h6 {
+        width: 60%;
+        line-height: 28px;
+        font-weight: normal;
+        letter-spacing: 0.5px;
+        border: 2px var(--transparent) solid;
+        color: var(--faintDark);
+        margin: 10px 60px;
+        height: fit-content;
+        font-size: 20px;
+        font-family: 'Jost', sans-serif
+    }
+
+    .app-right {
+        float: right;
+        width: 30%;
+        transform: rotate(3deg);
+        margin: 20px 40px;
+        box-shadow: 10px 10px 0px var(--shadow);
+        transition: all 0.2s ease;
+    }
+
+    .yt-vid {
+        width: 100%
+    }
+
+    .iframe {
+        width: 80%;
+        height: 500px
+    }
+
+    @media screen and (max-width:768px) {
+        .nav-ic {
+            display: block
+        }
+
+        .nav-strg {
+            display: none
+        }
+
+        .container {
+            border: 2px #00000000 solid;
+            padding: 0px;
+            margin: 60px 0
+        }
+
+        .mid-section {
+            padding: 0px 10px
+        }
+
+        .mid-section h1 {
+            margin: 0px 0px;
+            border: 2px rgba(0, 0, 0, 0) solid;
+            width: fit-content;
+            height: fit-content;
+            font-size: 30px;
+            font-family: 'Cinzel', serif
+        }
+
+        .mid-section h5 {
+            letter-spacing: 0.5px;
+            border: 2px rgba(0, 0, 0, 0) solid;
+            color: rgb(34, 34, 34);
+            margin: 0px 20px;
+            height: fit-content;
+            font-size: 20px;
+            font-family: 'Cinzel', serif
+        }
+
+        .mid-section h6 {
+            width: 90%;
+            line-height: 28px;
+            font-weight: normal;
+            letter-spacing: 0.5px;
+            border: 2px rgba(0, 0, 0, 0) solid;
+            color: rgb(112, 112, 112);
+            margin: 10px 20px;
+            height: fit-content;
+            font-size: 20px;
+            font-family: 'Jost', sans-serif
+        }
+
+        .app-right {
+            float: right;
+            width: 100%;
+            transform: rotate(0deg);
+            margin: 20px 0px;
+            box-shadow: 0px 0px 0px rgb(56, 56, 56)
+        }
+
+        .yt-vid {
+            display: none;
+            border: 2px #e0030300 solid;
+            width: 100%
+        }
+
+        .iframe {
+            display: none;
+            width: 100%;
+        }
+    }
+</style>
 </head>
 
 <body>
@@ -24,6 +187,11 @@
   <center>
    <h1>Welcome!</h1>
   </center>
+  <div class="custom-control custom-switch dark-control">
+    <input type="checkbox" class="custom-control-input" id="darkSwitch">
+    <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+  </div>
+
  </div>
  <div class="yt-vid">
   <center> <iframe class="iframe" src="https://www.youtube.com/embed/Y4eBULrca8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
@@ -136,6 +304,8 @@
  <div id="explore"></div>
 </div>
  <script src="js/global.js"></script>
+ <script src="dark mode/dark-mode-switch.min.js"></script>
+ <script src="dark mode/dark-mode-switch.js"></script>
 </body>
 </html>
 <!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
