--- a/pages/materials.html
+++ b/pages/materials.html
@@ -52,6 +52,7 @@
             color: rgb(221, 221, 221);
             background: #ffffff00;
             overflow: scroll;
+            cursor: pointer;
             transition: 0.3s ease;
         }
         tr:hover{
@@ -187,31 +188,18 @@
     <div class="material-container">
  <table class="table table-borderless">
   <tbody id="Table">
-    <tr class="" onclick="tr2()">
-    <td class="main-title"><img src="../img/avatar.jpg" class="cover-class"> EM - 1 Tutorial-4  (Solved)
+    <tr class="" onclick="emTayal()">
+    <td class="main-title"><img src="../img/avatar.jpg" class="cover-class"> Engineering Mechanics by A.K. Tayal 14th Edition PDF
     <br></td>
     <td class="division">B</td>
     <td class="provider">Provided by Om Lokhande</td>
-    <td class="date-time">Uploaded on 06 Mar 2021 at 10:50 PM</td>
+    <td class="date-time">Uploaded on 02 May 2021 at 10:29 PM</td>
     </tr>
-    <tr class="" onclick="tr3()">
-    <td class="main-title"><img src="../img/avatar.jpg" class="cover-class"> EG Practical Sheet 02 (Solved)
-    <br></td>
-    <td class="division">B</td>
-    <td class="provider">Provided by Om Lokhande</td>
-    <td class="date-time">Uploaded on 06 Mar 2021 at 10:47 PM</td>
-    </tr>
-  <tr class="" onclick="bmeExp7()">
-  <td class="main-title"><img src="../img/avatar.jpg" class="cover-class"> BME Exp. 7 - 3D Printing (Solved)
-  <br></td>
-  <td class="division">B</td>
-  <td class="provider">Provided by Keshav More</td>
-  <td class="date-time">Uploaded on 23 Feb 2021 at 7:36 PM</td>
-  </tr>
 </tbody>
 </table>
 </div>
 <script>
+    function emTayal(){window.location = "../index.html";}
     function home(){window.location = "../index.html";}
     function announcements(){window.location = "pages/announcements.html";}
 </script>
