--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -24,7 +24,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unofficial - Shorts</title><link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Unofficial - Videos</title><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <style>
@@ -282,7 +282,7 @@
     <div class="home">
 
         <div id="data" class="container9">
-            <!-- <video class="video" controls  controlsList="nodownload">
+            <video class="video" controls  controlsList="nodownload">
                 <source id="source" src="https://drive.google.com/uc?export=download&id=199446ubbXRqXo3yzej5ZuOCviLF5n_Xm">
             </video>
             <div class="title"> ANTARANG 2K22 UNOFFICIAL VIDEO | SANJIVANI COE  </div>
@@ -297,7 +297,7 @@
                 <i class="fa fa-thumbs-down ic-btn"></i>
                 <i class="fa fa-comment ic-btn"></i>
                 <i class="fa fa-share ic-btn"></i>
-            </div> -->
+            </div>
         </div>
         <div class="container10">
             <h3>More videos</h3>
