--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -283,7 +283,7 @@
 
         <div id="data" class="container9">
             <video class="video" controls  controlsList="nodownload">
-                <source id="source" src="https://drive.google.com/uc?export=download&id=199446ubbXRqXo3yzej5ZuOCviLF5n_Xm">
+                <source id="source" poster="" src="https://drive.google.com/uc?export=download&id=199446ubbXRqXo3yzej5ZuOCviLF5n_Xm">
             </video>
             <div class="title"> ANTARANG 2K22 UNOFFICIAL VIDEO | SANJIVANI COE  </div>
             <div class="description">
