--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -282,8 +282,8 @@
     <div class="home">
 
         <div id="data" class="container9">
-            <video class="video" controls  controlsList="nodownload">
-                <source id="source" poster="poster.jpg" preload="none" src="https://drive.google.com/uc?export=download&id=199446ubbXRqXo3yzej5ZuOCviLF5n_Xm">
+            <video class="video" poster="poster.jpg" preload="none" controls  controlsList="nodownload">
+                <source id="source" src="https://drive.google.com/uc?export=download&id=199446ubbXRqXo3yzej5ZuOCviLF5n_Xm">
             </video>
             <div class="title"> ANTARANG 2K22 UNOFFICIAL VIDEO | FLY HIGH MECH  </div>
             <div class="description">
