--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -289,7 +289,7 @@
             <div class="title"> ANTARANG 2K22 UNOFFICIAL VIDEO | FLY HIGH MECH | MECHANICAL DEPT.  </div>
             <div class="description">
                 <!-- <p class="tag">#ANTRANG 2K22</p><br> -->
-                <p class="detail"> <i class="fa fa-eye"></i> No views • <i class="fa fa-thumbs-up"></i> 0
+                <p class="detail"> <i class="fa fa-eye"></i> 05 views • <i class="fa fa-thumbs-up"></i> 3
                     <br>
                     Published on 06 Jun 2022
                 </p>
