--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -28,9 +28,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <style>
         body {
+            display: none;
     color: #000;
     background-color: #fff;
-    user-select: none
+    user-select: none;
 }
 
 h3 {
