--- a/user/anjali_/index.html
+++ b/user/anjali_/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../c0m_adm1n/global.css">
     <title>SANJIVANI COLLEGE OF ENGINEERING</title>
+    <link rel="icon"href="img/logo.jpg"sizes="16x16 32x32"type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
         body{
@@ -95,19 +97,25 @@
 </head>
 <body>
 
-    <nav>
-        <a class="nav-link">
-            Home
-        </a>
-        <a class="nav-link">
-            Branches
-        </a>
-        <a class="nav-link">
-            About
-        </a>
-    </nav>
 
+    <div class="maintain">
+        <h1>Maintain Text</h1>
+    </div>
+    <div class="support">
+        <h4>Oops! something went wrong, try agian later.</h4>
+    </div>
     <div class="home">
+        <nav>
+            <a class="nav-link">
+                Home
+            </a>
+            <a class="nav-link">
+                Branches
+            </a>
+            <a class="nav-link">
+                About
+            </a>
+        </nav>
         <br><br><br><br><br><br>
         <div class="branch">
         <h2>• Branch</h2>
